--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             								<a class="UnderlineNav-item  selected " href="/">
 	              								<code style="font-size: 0.8em;">for (fun && profit)</code>
             								</a>
-            								<a class="UnderlineNav-item " href="https://www.marina.vonsteinkirch.com/post">
+            								<a class="UnderlineNav-item " href="https://marina.vonsteinkirch.com/post">
 	       										<code style="font-size: 0.8em;">for (fun || profit)</code>
             								</a>
           							</nav>
@@ -228,7 +228,7 @@
 								<a class="UnderlineNav-item  selected " href="/">
 										<code style="font-size: 1.2em;">for (fun && profit)</code>
 							    	</a>
-							    	<a class='UnderlineNav-item  ' href="https://www.marina.vonsteinkirch.com/post/">
+							    	<a class='UnderlineNav-item  ' href="https://marina.vonsteinkirch.com/post/">
 										<code style="font-size: 1.2em;">for (fun || profit)</code>
 							    	</a>
 							</nav>
