--- a/public/index.html
+++ b/public/index.html
@@ -206,7 +206,7 @@
 							</div>
 							<div class="Box-body p-4">
 								<div class="d-flex flex-column">
-										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles!</span></strong>
+										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles</span></strong>
 										<p class="mb-2 text-mono text-small">Our super-secret team has grown to five incredible builders — 
 											and I can't wait to share the innovative work we're bringing to life. Stay tuned!
 										</p>
