--- a/public/index.html
+++ b/public/index.html
@@ -246,7 +246,7 @@
 												<h1><span style="color: rgb(148, 97, 199);">Specialization</span></h1>
 												<ol>
 			
-													<li><strong><span style="color: HotPink;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Training; AGI; Theorem Proving</li>
+													<li><strong><span style="color: HotPink;">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Train|Infer; AGI; Theorem Proving</li>
 													<li><strong><span style="color: HotPink;">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs </li>
 													<li><strong><span style="color: HotPink;">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
 													<li><strong><span style="color: HotPink;">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
