--- a/public/index.html
+++ b/public/index.html
@@ -207,10 +207,18 @@
 							<div class="Box-body p-4">
 								<div class="d-flex flex-column">
 										<strong><span style="color: rgb(18, 246, 87);">The Hero Squad Assembles</span></strong>
-										<p class="mb-2 text-mono text-small">Our super-secret team has grown to five incredible builders — 
-											and I can't wait to share the innovative work we're bringing to life. Stay tuned!
+										<p class="mb-2 text-mono text-small">Our super-secret team has grown to 5 incredible AI + Blockchain builders — 
+											and I can't wait to share the innovative work we're bringing to life. Stay tuned.
 										</p>
 									</div>
+								<div class="d-flex flex-column">
+										<strong><span style="color: rgb(18, 246, 87);">Working on Something New</span></strong>
+										<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the beauty of 
+											<a href="https://www.youtube.com/watch?v=q0Lx9bP0tWs" target="_blank">autumn</a>, 
+											I'm creating something fresh for my dear anon friends.
+											As always, stay tuned.
+										</p>
+								</div>
 							</div>
 						</div>
 						
