--- a/public/index.html
+++ b/public/index.html
@@ -212,7 +212,7 @@
 										</p>
 									</div>
 								<div class="d-flex flex-column">
-										<strong><span style="color: rgb(18, 246, 87);">Working on Something New</span></strong>
+										<strong><span style="color: rgb(18, 246, 87);">Working on Some New Artwork</span></strong>
 										<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the beauty of 
 											<a href="https://www.youtube.com/watch?v=q0Lx9bP0tWs" target="_blank">autumn</a>, 
 											I'm creating something fresh for my dear anon friends.
