--- a/public/index.html
+++ b/public/index.html
@@ -220,8 +220,8 @@
 								</article>
 								<article class="d-flex flex-column">
 									<strong><span class="success-text">Working on Some New Artwork</span></strong>
-									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the beauty of 
-										<a href="https://www.youtube.com/watch?v=q0Lx9bP0tWs" target="_blank" rel="noopener noreferrer">autumn</a>, 
+									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the joy of 
+										<a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a>, 
 										I'm creating something fresh for my dear anon friends.
 										As always, stay tuned.
 									</p>
