Update name format for Marina von Steinkirch

--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 									<h1 class="vcard-names pl-2 pl-md-0">
 										<span class="p-name vcard-fullname d-block overflow-hidden">
 											<h3>
-												<br><span class="success-text">Marina von Steinkirch, PhD</span><br>
+												<br><span class="success-text">Dr. Marina von Steinkirch, PhD</span><br>
 											</h3>
 										</span>
 										<span class="p-nickname vcard-username d-block"> 
