--- a/public/index.html
+++ b/public/index.html
@@ -223,7 +223,7 @@
 									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the joy of 
 										<a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a>, 
 										I'm creating something fresh for my dear anon friends.
-										As always, stay tuned.
+										Stay tuned and for now, <a href="https://www.vonsteinkirch.com/" target="_blank">join our spell</a>.
 									</p>
 								</article>
 							</div>
