--- a/public/index.html
+++ b/public/index.html
@@ -221,9 +221,9 @@
 								<article class="d-flex flex-column">
 									<strong><span class="success-text">Working on Some New Artwork</span></strong>
 									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the joy of 
-										<a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a>, 
+										<b><a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a></b>, 
 										I'm creating something fresh for my dear anon friends.
-										Stay tuned and for now, <a href="https://www.vonsteinkirch.com/" target="_blank">join our spell</a>.
+										Stay tuned and for now, <b><a href="https://www.vonsteinkirch.com/" target="_blank">join our spell</a></b>.
 									</p>
 								</article>
 							</div>
