--- a/public/index.html
+++ b/public/index.html
@@ -222,7 +222,7 @@
 									<strong><span class="success-text">Working on Some New Artwork</span></strong>
 									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the joy of 
 										<b><a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a></b>, 
-										I'm creating something fresh for my dear anon friends.
+										I'm creating something fresh for my dear anons.
 										Stay tuned for that and for <b><a href="https://samhain.vonsteinkirch.com" target="_blank">when door 13 opens</a></b>.
 									</p>
 								</article>
