--- a/public/index.html
+++ b/public/index.html
@@ -213,13 +213,13 @@
 							</header>
 							<div class="Box-body p-4">
 								<article class="d-flex flex-column mb-3">
-									<strong><span class="success-text">The Hero Squad Assembles</span></strong>
+									<strong><span class="success-text">The Hero Squad Assembles 🤖</span></strong>
 									<p class="mb-2 text-mono text-small">Our super-secret team has grown to 5 incredible AI + Blockchain builders — 
 										and I can't wait to share the innovative work we're bringing to life. Stay tuned.
 									</p>
 								</article>
 								<article class="d-flex flex-column">
-									<strong><span class="success-text">Working on Some New Artwork</span></strong>
+									<strong><span class="success-text">Working on a New Artwork 🎞️</span></strong>
 									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the joy of 
 										<b><a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a></b>, 
 										I'm creating something fresh for my dear anons.
