guyssss, december is going to actually be good - saturn and mercury are finally direct and it's sagi season. go out, make friends, take over the world. the future is and has always been ours.

--- a/public/index.html
+++ b/public/index.html
@@ -213,17 +213,18 @@
 							</header>
 							<div class="Box-body p-4">
 								<article class="d-flex flex-column mb-3">
-									<strong><span class="success-text">The Hero Squad Assembles 🤖</span></strong>
+									<strong><span class="success-text">The Hero Squad Assembles</span></strong>
 									<p class="mb-2 text-mono text-small">Our super-secret team has grown to 5 incredible AI + Blockchain builders — 
 										and I can't wait to share the innovative work we're bringing to life. Stay tuned.
 									</p>
 								</article>
 								<article class="d-flex flex-column">
-									<strong><span class="success-text">Working on a New Artwork 🎞️</span></strong>
-									<p class="mb-2 text-mono text-small">In my free time, when I'm not lost in the joy of 
-										<b><a href="https://www.youtube.com/watch?v=r_CavgvM__4" target="_blank" rel="noopener noreferrer">autumn</a></b>, 
-										I'm creating something fresh for my dear anons.
-										Stay tuned for that and for <b><a href="https://samhain.vonsteinkirch.com" target="_blank">when door 13 opens</a></b>.
+									<strong><span class="success-text">Working on a New Artwork</span></strong>
+									<p class="mb-2 text-mono text-small">
+										Winter is coming, and I've been crafting something fresh for my dear anons.
+										Hint: it belongs to the realm of the 7th art. Meanwhile, there is a
+										<b><a href="https://www.vonsteinkirch.com/" target="_blank">5th-wall meta story</a></b>.
+										PS: we're still waiting on that <b><a href="https://samhain.vonsteinkirch.com" target="_blank">door 13</a></b>.
 									</p>
 								</article>
 							</div>
