--- a/public/index.html
+++ b/public/index.html
@@ -213,18 +213,17 @@
 							</header>
 							<div class="Box-body p-4">
 								<article class="d-flex flex-column mb-3">
-									<strong><span class="success-text">The Hero Squad Assembles</span></strong>
-									<p class="mb-2 text-mono text-small">Our super-secret team has grown to 5 incredible AI + Blockchain builders — 
-										and I can't wait to share the innovative work we're bringing to life. Stay tuned.
+									<strong><span class="success-text">Looking Forward to What's Next</span></strong>
+									<p class="mb-2 text-mono text-small">"Where there is no hope, it is incumbent on us to invent it." — Albert Camus
 									</p>
 								</article>
 								<article class="d-flex flex-column">
 									<strong><span class="success-text">Working on a New Artwork</span></strong>
 									<p class="mb-2 text-mono text-small">
-										Winter is coming, and I've been crafting something fresh for my dear anons.
-										Hint: it belongs to the realm of the 7th art. Meanwhile, there is a
-										<b><a href="https://www.vonsteinkirch.com/" target="_blank">5th-wall meta story</a></b>.
-										PS: we're still waiting on that <b><a href="https://samhain.vonsteinkirch.com" target="_blank">door 13</a></b>.
+										I've been crafting something fresh for my dear anon (in the realm of the 7th art).
+                                        Meanwhile, there was a
+                                        <b><a href="https://www.vonsteinkirch.com/" target="_blank">5th-wall meta story</a></b>,
+                                        and a <b><a href="https://samhain.vonsteinkirch.com" target="_blank">door 13</a></b> to be opened.
 									</p>
 								</article>
 							</div>
