add all updates

--- a/public/index.html
+++ b/public/index.html
@@ -214,16 +214,17 @@
 							<div class="Box-body p-4">
 								<article class="d-flex flex-column mb-3">
 									<strong><span class="success-text">Looking Forward to What's Next</span></strong>
-									<p class="mb-2 text-mono text-small">"Where there is no hope, it is incumbent on us to invent it." — Albert Camus
+									<p class="mb-2 text-mono text-small"><i>"Where there is no hope, it is incumbent on us to invent it."</i> 
+										<br>— Albert Camus
 									</p>
 								</article>
 								<article class="d-flex flex-column">
 									<strong><span class="success-text">Working on a New Artwork</span></strong>
 									<p class="mb-2 text-mono text-small">
-										I've been crafting something fresh for my dear anon (in the realm of the 7th art).
-                                        Meanwhile, there was a
-                                        <b><a href="https://www.vonsteinkirch.com/" target="_blank">5th-wall meta story</a></b>,
-                                        and a <b><a href="https://samhain.vonsteinkirch.com" target="_blank">door 13</a></b> to be opened.
+										I have been crafting something fresh for my dear anons (in the realm of the 7th art).
+                                        In the meantime, there was a
+                                        <b><a href="https://demons.vonsteinkirch.com/" target="_blank">5th-wall meta story</a></b>
+                                        and a <b><a href="https://samhain.vonsteinkirch.com" target="_blank">door 13</a></b> waiting to be opened.
 									</p>
 								</article>
 							</div>
@@ -251,7 +252,7 @@
 									<article class="markdown-body entry-content container-lg f5">
 										<!-- Specialization Section -->
 										<section class="content-section">
-											<h1 class="section-title">Specialization</h1>
+											<h1 class="section-title">Engineering && Scientific Specialization</h1>
 											<ol>
 												<li><strong><span class="highlight-text">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Train|Infer; AGI; Theorem Proving</li>
 												<li><strong><span class="highlight-text">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs</li>
@@ -262,10 +263,12 @@
 
 										<!-- Experience Section -->
 										<section class="content-section">
-											<h1 class="section-title">Experience</h1>
+											<h1 class="section-title">Engineering && Scientific Experience</h1>
 											<ul>  
-												<li><strong>Blockchain && AI Principal Software Engineer at ◼️◼️◼️◼️◼️◼️◼️◼️◼️ (stealth for now)</strong></li>
-												<li><strong>Co-founded <a target="_blank" href="https://github.com/urani-trade" rel="noopener noreferrer">urani.trade</a></strong>, an <b>R&D org for <a href="https://github.com/autistic-symposium/mev-toolkit" target="_blank" rel="noopener noreferrer">toxic-MEV minimization</a> && DeFi gamification</b></li> 
+												<li><strong><i>Looking for a long-term opportunity w/ a team that values my skills, fostering respect</i>
+												</b></li>
+												<li><strong>Blockchain && AI Principal Software Engineer</strong> at <strong><a target="_blank" href="https://hellas.ai/" rel="noopener noreferrer">hellas.ai</a></strong> + <b>private research projects</b></li>
+												<li><strong>Co-founded <a target="_blank" href="https://github.com/urani-trade" rel="noopener noreferrer">urani.trade</a></strong>, an R&D org for <b><a href="https://github.com/autistic-symposium/mev-toolkit" target="_blank" rel="noopener noreferrer">toxic-MEV minimization</a> && DeFi gamification</b></li> 
 												<li><strong>Blockchain Researcher && Engineer</strong>; XP from: <strong><a target="_blank" href="https://ethereum.foundation/" rel="noopener noreferrer">Ethereum PSE</a></strong>, <strong><a target="_blank" href="https://app.rook.fi/en/trade" rel="noopener noreferrer">KeeeperDAO</a></strong>, <strong><a target="_blank" href="/images/immunefi.png" rel="noopener noreferrer">Immunefi</a></strong></li>
 												<li><strong>Founding Engineer of the <a target="_blank" href="https://opensea.io/assets/ethereum/0x495f947276749ce646f68ac8c248420045cb7b5e/102260123057669474950847799880201608080189635296019951388527127018360736317441" rel="noopener noreferrer">Blockchain</a> Team at Shopify</strong> (together with <strong>other shopi<a target="_blank" href="https://alexdanco.com/" rel="noopener noreferrer">f</a><a href="https://twitter.com/crypt0z_Ash" target="_blank" rel="noopener noreferrer">o</a><a href="https://twitter.com/CanadaKaz" target="_blank" rel="noopener noreferrer">l</a><a href="https://github.com/CorySvensson" target="_blank" rel="noopener noreferrer">k</a></strong>)</li>
 												<li><strong>Senior Software Engineer</strong>: <strong><a target="_blank" href="https://www.shopify.com" rel="noopener noreferrer">Shopify</a></strong>; <strong><a target="_blank" href="https://developer.apple.com/library/archive/documentation/MacOSX/Conceptual/OSX_Technology_Overview/CoreOSLayer/CoreOSLayer.html" rel="noopener noreferrer">Apple</a></strong> (CoreOS); <strong><a target="_blank" href="https://www.etsy.com/codeascraft" rel="noopener noreferrer">Etsy</a></strong> (Sec team); <strong><a target="_blank" href="https://engineeringblog.yelp.com/" rel="noopener noreferrer">Yelp</a></strong> (Sec team)</li>
@@ -278,7 +281,7 @@
 
 										<!-- Nerdhood Section -->
 										<section class="content-section">
-											<h1 class="section-title">Nerdhood</h1>
+											<h1 class="section-title">Nerdhood Lore</h1>
 											<ul>
 												<li><strong>Peer-reviewed scientific publications</strong>: with <b><a target="_blank" href="https://iopscience.iop.org/article/10.3847/0004-637X/832/2/102" rel="noopener noreferrer">Los</a> <b><a target="_blank" href="https://www.osti.gov/pages/biblio/1337104-model-atmospheres-ray-bursting-neutron-stars" rel="noopener noreferrer">Alamos</a></b>; with <b><a target="_blank" href="https://journals.aps.org/prc/abstract/10.1103/PhysRevC.86.024908" rel="noopener noreferrer">Brookhaven</a></b>; and <b><a target="_blank" href="https://scholar.google.com/citations?user=2u83QMkAAAAJ&amp;hl=en" rel="noopener noreferrer">others</a></b></li>
 												<li><strong>Post-graduate e-books: <a target="_blank" href="http://www.astro.sunysb.edu/steinkirch/books/group.pdf" rel="noopener noreferrer">Group Theory</a></strong>; <strong><a target="_blank" href="https://www.freebookcentre.net/physics-books-download/Introduction-to-Quantum-Field-Theory-by-Marina-von-Steinkirch.html" rel="noopener noreferrer">Quantum Field Theory</a></strong>; <strong><a target="_blank" href="http://www.astro.sunysb.edu/steinkirch/books/qi.pdf" rel="noopener noreferrer">Quantum Information</a></strong></li>
