--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Dr. von Steinkirch's Kingd✪m</title>
+	<title>Dr. Marina von Steinkirch's Page</title>
 	
 	<!-- Meta tags -->
 	<meta name="theme-color" content="#1e2327">
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Dr. Marina von Steinkirch - Theoretical Astrophysicist, Blockchain & AI Engineer" />
+	<meta property="og:description" content="Dr. Marina von Steinkirch's Page" />
 	<meta property="og:url" content="/" />
 	<meta property="og:image" content="/images/steinkirch.png">
 	<meta property="og:image:width" content="2048">
@@ -20,7 +20,7 @@
 	<link rel="icon" type="image/x-icon" href='/images/favicon.ico'>
 	
 	<!-- RSS Feed -->
-	<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Dr. von Steinkirch's Blog" />
+	<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Dr. Marina von Steinkirch's Page" />
 	
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href='/css/frameworks.min.css' />
@@ -214,16 +214,14 @@
 							</header>
 							<div class="Box-body p-4">
 								<article class="d-flex flex-column mb-3">
-									<strong><span class="success-text">Science && Art in 2026 will be Rad</span></strong>
-									<p class="mb-2 text-mono text-small"><i>"Where there is no hope, <b><a href="https://www.vonsteinkirch.com/" target="_blank">it is incumbent on us to invent it.</a></b>"</i> 
-										<br>— Albert Camus
+									<strong><span class="success-text">Science && Art in 2026 == RAD</span></strong>
+									<p class="mb-2 text-mono text-small"><i>Albert Camus says "Where there is no hope, <b><a href="https://www.vonsteinkirch.com/" target="_blank">it is incumbent on us to invent it.</a></b>"</i> 
 									</p>
 								</article>
 								<article class="d-flex flex-column">
-									<strong><span class="success-text">Working on a New Artwork</span></strong>
+									<strong><span class="success-text">Time to pre-order my first book</span></strong>
 									<p class="mb-2 text-mono text-small">
-										I have been crafting <b><a href="https://gist.github.com/von-steinkirch/7261c6c190f55bbbe713a640953bac16" target="_blank">something fresh</a></b> for my dear anons (in the realm of the 7th art).
-										I will be back online when it's ready.
+										Join me on an exciting journey through a fresh, quasi-fictional science fiction universe <b><a href="https://13.vonsteinkirch.com/" target="_blank">Fasten your seatbelts on 2006; 02; 18</a></b>.
 									</p>
 								</article>
 							</div>
