--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 									<h1 class="vcard-names pl-2 pl-md-0">
 										<span class="p-name vcard-fullname d-block overflow-hidden">
 											<h3>
-												<br><span class="success-text">Dr. Marina von Steinkirch, PhD</span><br>
+												<br><span class="success-text">Dr. Marina von Steinkirch</span><br>
 											</h3>
 										</span>
 										<span class="p-nickname vcard-username d-block"> 
@@ -249,18 +249,19 @@
 									<article class="markdown-body entry-content container-lg f5">
 										<!-- Specialization Section -->
 										<section class="content-section">
-											<h1 class="section-title">Engineering && Scientific Specialization</h1>
+											<h1 class="section-title">Areas of Interest</h1>
 											<ol>
 												<li><strong><span class="highlight-text">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Train|Infer; AGI; Theorem Proving</li>
 												<li><strong><span class="highlight-text">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs</li>
 												<li><strong><span class="highlight-text">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
 												<li><strong><span class="highlight-text">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
+												<li><strong><span class="highlight-text">Storytelling</span></strong> → Philosophy; Theology; Filmmaking; Literature; The Human Condition</li>
 											</ol>
 										</section>
 
 										<!-- Experience Section -->
 										<section class="content-section">
-											<h1 class="section-title">Engineering && Scientific Experience</h1>
+											<h1 class="section-title">Selected Experience</h1>
 											<ul>  
 												<li><strong><i>(Calmly) Looking for long-term scientific position w/ a team that thinks i'm awesome</i>
 												</b></li>
