--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
 								<article class="d-flex flex-column">
 									<strong><span class="success-text">Time to pre-order my first book</span></strong>
 									<p class="mb-2 text-mono text-small">
-										Join me on an exciting journey through a fresh, quasi-fictional science fiction universe <b><a href="https://13.vonsteinkirch.com/" target="_blank">Fasten your seatbelts on 2006; 02; 18</a></b>.
+										Join me on an exciting journey through a fresh, quasi-fictional science fiction universe! <b><a href="https://13.vonsteinkirch.com/" target="_blank">Fasten your seatbelts for 2026; 02; 18</a></b>.
 									</p>
 								</article>
 							</div>
