--- a/public/index.html
+++ b/public/index.html
@@ -251,11 +251,11 @@
 										<section class="content-section">
 											<h1 class="section-title">Areas of Interest</h1>
 											<ol>
-												<li><strong><span class="highlight-text">AI && ML</span></strong> → Agents; LLMs; RMs; Decentralized Train|Infer; AGI; Theorem Proving</li>
-												<li><strong><span class="highlight-text">Blockchains</span></strong> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs</li>
-												<li><strong><span class="highlight-text">Astrophysics</span></strong> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</li>
-												<li><strong><span class="highlight-text">Clean Code</span></strong> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</li>
-												<li><strong><span class="highlight-text">Storytelling</span></strong> → Philosophy; Theology; Filmmaking; Literature; The Human Condition</li>
+												<li><strong><span class="highlight-text">AI && ML</span> → Agents; LLMs; RMs; Decentralized Train|Infer; AGI; Theorem Proving</strong> </li>
+												<li><strong><span class="highlight-text">Blockchains</span> → DeSci; Macro; MEV; Protocols; Game Theory; Cryptography; ZKPs</strong> </li>
+												<li><strong><span class="highlight-text">Astrophysics</span> → Quantum Field Theories; Group Theory; Astronomy; Cosmology</strong> </li>
+												<li><strong><span class="highlight-text">Clean Code</span> → Rust; Python; Solidity; Lean; Formal Verification; Infra; Algorithms</strong> </li>
+												<li><strong><span class="highlight-text">Storytelling</span> → Philosophy; Theology; Filmmaking; Literature; The Human Condition</strong> </li>
 											</ol>
 										</section>
 
