--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Dr. von Steinkirch's Kingd✪m - 404</title>
+    <title>Dr. von Steinkirch's Universe - 404</title>
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
