--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Dr. Marina von Steinkirch's Page</title>
+	<title>Dr. Steinkirch's Universe</title>
 	
 	<!-- Meta tags -->
 	<meta name="theme-color" content="#1e2327">
 	<meta name="robots" content="noodp" />
 	<link rel="canonical" href="/" />
 	<meta property="og:type" content="website" />
-	<meta property="og:description" content="Dr. Marina von Steinkirch's Page" />
+	<meta property="og:description" content="Dr. Steinkirch's Universe" />
 	<meta property="og:url" content="/" />
 	<meta property="og:image" content="/images/steinkirch.png">
 	<meta property="og:image:width" content="2048">
@@ -20,7 +20,7 @@
 	<link rel="icon" type="image/x-icon" href='/images/favicon.ico'>
 	
 	<!-- RSS Feed -->
-	<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Dr. Marina von Steinkirch's Page" />
+	<link href="/index.xml" rel="alternate" type="application/rss+xml" title="Dr. Steinkirch's Universe" />
 	
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href='/css/frameworks.min.css' />
@@ -187,7 +187,7 @@
 									<h1 class="vcard-names pl-2 pl-md-0">
 										<span class="p-name vcard-fullname d-block overflow-hidden">
 											<h3>
-												<br><span class="success-text">Dr. Marina von Steinkirch</span><br>
+												<br><span class="success-text">Dr. Steinkirch</span><br>
 											</h3>
 										</span>
 										<span class="p-nickname vcard-username d-block"> 
