--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 									<h1 class="vcard-names pl-2 pl-md-0">
 										<span class="p-name vcard-fullname d-block overflow-hidden">
 											<h3>
-												<br><span class="success-text">Dr. Steinkirch</span><br>
+												<br><span class="success-text">Dr. Marina von Steinkirch</span><br>
 											</h3>
 										</span>
 										<span class="p-nickname vcard-username d-block"> 
@@ -213,11 +213,15 @@
 								</h3>
 							</header>
 							<div class="Box-body p-4">
+
 								<article class="d-flex flex-column mb-3">
 									<strong><span class="success-text">Science && Art in 2026 == RAD</span></strong>
-									<p class="mb-2 text-mono text-small"><i>Albert Camus says "Where there is no hope, <b><a href="https://www.vonsteinkirch.com/" target="_blank">it is incumbent on us to invent it.</a></b>"</i> 
+									<p class="mb-2 text-mono text-small">(Calmly) Looking for long-term scientific position with a well-established team that knows I'm awesome. 
+										<b><a href="https://www.vonsteinkirch.com/" target="_blank">Here is my OS</a></b>.
 									</p>
 								</article>
+
+
 								<article class="d-flex flex-column">
 									<strong><span class="success-text">Time to pre-order my first book</span></strong>
 									<p class="mb-2 text-mono text-small">
@@ -263,8 +267,6 @@
 										<section class="content-section">
 											<h1 class="section-title">Selected Experience</h1>
 											<ul>  
-												<li><strong><i>(Calmly) Looking for long-term scientific position w/ a team that thinks i'm awesome</i>
-												</b></li>
 												<li><strong>Blockchain && AI Principal Software Engineer</strong> at <strong><a target="_blank" href="https://hellas.ai/" rel="noopener noreferrer">hellas.ai</a></strong> + <b>private research projects</b></li>
 												<li><strong>Co-founded <a target="_blank" href="https://github.com/urani-trade" rel="noopener noreferrer">urani.trade</a></strong>, an R&D org for <b><a href="https://github.com/autistic-symposium/mev-toolkit" target="_blank" rel="noopener noreferrer">toxic-MEV minimization</a> && DeFi gamification</b></li> 
 												<li><strong>Blockchain Researcher && Engineer</strong>; XP from: <strong><a target="_blank" href="https://ethereum.foundation/" rel="noopener noreferrer">Ethereum PSE</a></strong>, <strong><a target="_blank" href="https://app.rook.fi/en/trade" rel="noopener noreferrer">KeeeperDAO</a></strong>, <strong><a target="_blank" href="/images/immunefi.png" rel="noopener noreferrer">Immunefi</a></strong></li>
