--- a/public/index.html
+++ b/public/index.html
@@ -196,7 +196,7 @@
 													<br>Theoretical Astrophysicist → 
 													<br>[Blockchain + Machine Learning]
 													<br>Principal Software Engineer → 
-													<br>Scientist && Storyteller
+													<br>✨ Scientist && Storyteller ✨
 												</h4>
 											</strong>
 										</span>
@@ -216,8 +216,8 @@
 
 								<article class="d-flex flex-column mb-3">
 									<strong><span class="success-text">Science && Art in 2026 == RAD</span></strong>
-									<p class="mb-2 text-mono text-small">(Calmly) Looking for long-term scientific position with a well-established team that knows I'm awesome. 
-										<b><a href="https://www.vonsteinkirch.com/" target="_blank">Here is my OS</a></b>.
+									<p class="mb-2 text-mono text-small">(Calmly) Looking for a long-term scientific position with a well-established team that knows I'm awesome. 
+										<b><a href="https://www.vonsteinkirch.com/" target="_blank">Let's connect on my OS</a></b>.
 									</p>
 								</article>
 
