--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,7 @@
 									<h1 class="vcard-names pl-2 pl-md-0">
 										<span class="p-name vcard-fullname d-block overflow-hidden">
 											<h3>
-												<br><span class="success-text">Dr. Marina von Steinkirch</span><br>
+												<br><span class="success-text">Dr. Marina von Steinkirch</span>
 											</h3>
 										</span>
 										<span class="p-nickname vcard-username d-block"> 
@@ -206,28 +206,34 @@
 						</div>
 						
 						<!-- News Section -->
-						<section class="Box mt-5">
+						<section class="Box mt-2">
 							<header class="Box-header">
 								<h3 class="Box-title">
 									<span class="highlight-text news-title-center">LATEST NEWS</span>
 								</h3>
 							</header>
 							<div class="Box-body p-4">
-
-								<article class="d-flex flex-column mb-3">
-									<strong><span class="success-text">Science && Art in 2026 == RAD</span></strong>
-									<p class="mb-2 text-mono text-small">(Calmly) Looking for a long-term scientific position with a well-established team that knows I'm awesome. 
-										<b><a href="https://www.vonsteinkirch.com/" target="_blank">Let's connect on my OS</a></b>.
-									</p>
-								</article>
-
-
 								<article class="d-flex flex-column">
-									<strong><span class="success-text">Time to pre-order my first book</span></strong>
+									<strong><span class="success-text">Time to Pre-Order My First Book</span></strong>
 									<p class="mb-2 text-mono text-small">
 										Join me on an exciting journey through a fresh, quasi-fictional science fiction universe! <b><a href="https://13.vonsteinkirch.com/" target="_blank">Fasten your seatbelts for 2026; 02; 18</a></b>.
 									</p>
 								</article>
+
+								<article class="d-flex flex-column">
+									<strong><span class="success-text">Door 13 Was Finally Opened</span></strong>
+									<p class="mb-2 text-mono text-small">
+										Check<b><a href="https://samhain.vonsteinkirch.com/" target="_blank"> the results of the spell</a></b> 
+										and join <b><a href="https://fridays.vonsteinkirch.com/" target="_blank">my Friday sermons</a></b>.
+								</article>
+
+								<article class="d-flex flex-column">
+									<strong><span class="success-text">Science && Art in 2026 == RAD</span></strong>
+									<p class="mb-2 text-mono text-small">I'm (calmly) looking for a long-term scientific position with a top-tier team that thinks I'm awesome. 
+										<b><a href="https://www.vonsteinkirch.com/" target="_blank">Let's connect on my OS</a></b>.
+									</p>
+								</article>
+
 							</div>
 						</section>
 					</aside>
